Add compass scss generator so that gems that use compass can be imported in the sass

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,19 +1,29 @@
+/* ----------------------------------------------------------*/
 /* Base */
 /* ----------------------------------------------------------*/
+
+// breakpoint sizes
+$medium: 600px;
+$large: 900px;
+
+$susy: (
+  columns: 12,
+  gutters: 1/4
+);
 
 * {
   margin: 0;
   padding: 0;
 }
 
-html, body { height: 100%; }
-
-body {
+html, body {
+  height: 100%;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
   background-color: #fdfdfd;
+  @include container(show);
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
@@ -21,12 +31,3 @@ h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
 a         { color: #2a7ae2; text-decoration: none; }
 a:hover   { color: #000; text-decoration: underline; }
 a:visited { color: #205caa; }
-
-.github-icon-svg,
-.twitter-icon-svg {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  position: relative;
-  top: 3px;
-}
