Compress compass sass compilation

--- a/css/main.css
+++ b/css/main.css
@@ -1,514 +1,1 @@
-/* ----------------------------------------------------------*/
-/* Base */
-/* ----------------------------------------------------------*/
-/* line 14, ../_sass/_base.scss */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* line 19, ../_sass/_base.scss */
-html, body {
-  height: 100%;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 300;
-  background-color: #fdfdfd;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: -webkit-linear-gradient( left , rgba(102, 102, 255, 0.25), rgba(179, 179, 255, 0.25) 80%, transparent 80%);
-  background-image: linear-gradient(to right, rgba(102, 102, 255, 0.25), rgba(179, 179, 255, 0.25) 80%, transparent 80%);
-  background-size: 8.47458%;
-  background-origin: content-box;
-  background-clip: content-box;
-  background-position: left top;
-}
-@media (min-width: 500px) {
-  /* line 19, ../_sass/_base.scss */
-  html, body {
-    font-size: 24px;
-  }
-}
-/* line 12, ../.bundle/ruby/1.9.1/gems/susy-2.1.2/sass/susy/output/support/_clearfix.scss */
-html:after, body:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
-/* line 32, ../_sass/_base.scss */
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight: 400;
-}
-
-/* line 34, ../_sass/_base.scss */
-a {
-  color: #2a7ae2;
-  text-decoration: none;
-}
-
-/* line 35, ../_sass/_base.scss */
-a:hover {
-  color: #000;
-  text-decoration: underline;
-}
-
-/* line 36, ../_sass/_base.scss */
-a:visited {
-  color: #205caa;
-}
-
-/* Syntax highlighting styles */
-/* ----------------------------------------------------------*/
-/* line 3, ../_sass/_solarized_light.scss */
-.highlight {
-  background-color: #efefef;
-  padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
-  margin: 20px 0 20px 0;
-  overflow: hidden;
-}
-
-/* line 14, ../_sass/_solarized_light.scss */
-code {
-  font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
-}
-
-/* line 18, ../_sass/_solarized_light.scss */
-.highlight .c {
-  color: #586e75;
-}
-
-/* Comment */
-/* line 19, ../_sass/_solarized_light.scss */
-.highlight .err {
-  color: #93a1a1;
-}
-
-/* Error */
-/* line 20, ../_sass/_solarized_light.scss */
-.highlight .g {
-  color: #93a1a1;
-}
-
-/* Generic */
-/* line 21, ../_sass/_solarized_light.scss */
-.highlight .k {
-  color: #859900;
-}
-
-/* Keyword */
-/* line 22, ../_sass/_solarized_light.scss */
-.highlight .l {
-  color: #93a1a1;
-}
-
-/* Literal */
-/* line 23, ../_sass/_solarized_light.scss */
-.highlight .n {
-  color: #93a1a1;
-}
-
-/* Name */
-/* line 24, ../_sass/_solarized_light.scss */
-.highlight .o {
-  color: #859900;
-}
-
-/* Operator */
-/* line 25, ../_sass/_solarized_light.scss */
-.highlight .x {
-  color: #cb4b16;
-}
-
-/* Other */
-/* line 26, ../_sass/_solarized_light.scss */
-.highlight .p {
-  color: #93a1a1;
-}
-
-/* Punctuation */
-/* line 27, ../_sass/_solarized_light.scss */
-.highlight .cm {
-  color: #586e75;
-}
-
-/* Comment.Multiline */
-/* line 28, ../_sass/_solarized_light.scss */
-.highlight .cp {
-  color: #859900;
-}
-
-/* Comment.Preproc */
-/* line 29, ../_sass/_solarized_light.scss */
-.highlight .c1 {
-  color: #586e75;
-}
-
-/* Comment.Single */
-/* line 30, ../_sass/_solarized_light.scss */
-.highlight .cs {
-  color: #859900;
-}
-
-/* Comment.Special */
-/* line 31, ../_sass/_solarized_light.scss */
-.highlight .gd {
-  color: #2aa198;
-}
-
-/* Generic.Deleted */
-/* line 32, ../_sass/_solarized_light.scss */
-.highlight .ge {
-  color: #93A1A1;
-  font-style: italic;
-}
-
-/* Generic.Emph */
-/* line 33, ../_sass/_solarized_light.scss */
-.highlight .gr {
-  color: #dc322f;
-}
-
-/* Generic.Error */
-/* line 34, ../_sass/_solarized_light.scss */
-.highlight .gh {
-  color: #cb4b16;
-}
-
-/* Generic.Heading */
-/* line 35, ../_sass/_solarized_light.scss */
-.highlight .gi {
-  color: #859900;
-}
-
-/* Generic.Inserted */
-/* line 36, ../_sass/_solarized_light.scss */
-.highlight .go {
-  color: #93a1a1;
-}
-
-/* Generic.Output */
-/* line 37, ../_sass/_solarized_light.scss */
-.highlight .gp {
-  color: #93a1a1;
-}
-
-/* Generic.Prompt */
-/* line 38, ../_sass/_solarized_light.scss */
-.highlight .gs {
-  color: #93A1A1;
-  font-weight: bold;
-}
-
-/* Generic.Strong */
-/* line 39, ../_sass/_solarized_light.scss */
-.highlight .gu {
-  color: #cb4b16;
-}
-
-/* Generic.Subheading */
-/* line 40, ../_sass/_solarized_light.scss */
-.highlight .gt {
-  color: #93a1a1;
-}
-
-/* Generic.Traceback */
-/* line 41, ../_sass/_solarized_light.scss */
-.highlight .kc {
-  color: #cb4b16;
-}
-
-/* Keyword.Constant */
-/* line 42, ../_sass/_solarized_light.scss */
-.highlight .kd {
-  color: #268bd2;
-}
-
-/* Keyword.Declaration */
-/* line 43, ../_sass/_solarized_light.scss */
-.highlight .kn {
-  color: #859900;
-}
-
-/* Keyword.Namespace */
-/* line 44, ../_sass/_solarized_light.scss */
-.highlight .kp {
-  color: #859900;
-}
-
-/* Keyword.Pseudo */
-/* line 45, ../_sass/_solarized_light.scss */
-.highlight .kr {
-  color: #268bd2;
-}
-
-/* Keyword.Reserved */
-/* line 46, ../_sass/_solarized_light.scss */
-.highlight .kt {
-  color: #dc322f;
-}
-
-/* Keyword.Type */
-/* line 47, ../_sass/_solarized_light.scss */
-.highlight .ld {
-  color: #93a1a1;
-}
-
-/* Literal.Date */
-/* line 48, ../_sass/_solarized_light.scss */
-.highlight .m {
-  color: #2aa198;
-}
-
-/* Literal.Number */
-/* line 49, ../_sass/_solarized_light.scss */
-.highlight .s {
-  color: #2aa198;
-}
-
-/* Literal.String */
-/* line 50, ../_sass/_solarized_light.scss */
-.highlight .na {
-  color: #93a1a1;
-}
-
-/* Name.Attribute */
-/* line 51, ../_sass/_solarized_light.scss */
-.highlight .nb {
-  color: #b58900;
-}
-
-/* Name.Builtin */
-/* line 52, ../_sass/_solarized_light.scss */
-.highlight .nc {
-  color: #268bd2;
-}
-
-/* Name.Class */
-/* line 53, ../_sass/_solarized_light.scss */
-.highlight .no {
-  color: #cb4b16;
-}
-
-/* Name.Constant */
-/* line 54, ../_sass/_solarized_light.scss */
-.highlight .nd {
-  color: #268bd2;
-}
-
-/* Name.Decorator */
-/* line 55, ../_sass/_solarized_light.scss */
-.highlight .ni {
-  color: #cb4b16;
-}
-
-/* Name.Entity */
-/* line 56, ../_sass/_solarized_light.scss */
-.highlight .ne {
-  color: #cb4b16;
-}
-
-/* Name.Exception */
-/* line 57, ../_sass/_solarized_light.scss */
-.highlight .nf {
-  color: #268bd2;
-}
-
-/* Name.Function */
-/* line 58, ../_sass/_solarized_light.scss */
-.highlight .nl {
-  color: #93a1a1;
-}
-
-/* Name.Label */
-/* line 59, ../_sass/_solarized_light.scss */
-.highlight .nn {
-  color: #93a1a1;
-}
-
-/* Name.Namespace */
-/* line 60, ../_sass/_solarized_light.scss */
-.highlight .nx {
-  color: #555555;
-}
-
-/* Name.Other */
-/* line 61, ../_sass/_solarized_light.scss */
-.highlight .py {
-  color: #93a1a1;
-}
-
-/* Name.Property */
-/* line 62, ../_sass/_solarized_light.scss */
-.highlight .nt {
-  color: #268bd2;
-}
-
-/* Name.Tag */
-/* line 63, ../_sass/_solarized_light.scss */
-.highlight .nv {
-  color: #268bd2;
-}
-
-/* Name.Variable */
-/* line 64, ../_sass/_solarized_light.scss */
-.highlight .ow {
-  color: #859900;
-}
-
-/* Operator.Word */
-/* line 65, ../_sass/_solarized_light.scss */
-.highlight .w {
-  color: #93a1a1;
-}
-
-/* Text.Whitespace */
-/* line 66, ../_sass/_solarized_light.scss */
-.highlight .mf {
-  color: #2aa198;
-}
-
-/* Literal.Number.Float */
-/* line 67, ../_sass/_solarized_light.scss */
-.highlight .mh {
-  color: #2aa198;
-}
-
-/* Literal.Number.Hex */
-/* line 68, ../_sass/_solarized_light.scss */
-.highlight .mi {
-  color: #2aa198;
-}
-
-/* Literal.Number.Integer */
-/* line 69, ../_sass/_solarized_light.scss */
-.highlight .mo {
-  color: #2aa198;
-}
-
-/* Literal.Number.Oct */
-/* line 70, ../_sass/_solarized_light.scss */
-.highlight .sb {
-  color: #586e75;
-}
-
-/* Literal.String.Backtick */
-/* line 71, ../_sass/_solarized_light.scss */
-.highlight .sc {
-  color: #2aa198;
-}
-
-/* Literal.String.Char */
-/* line 72, ../_sass/_solarized_light.scss */
-.highlight .sd {
-  color: #93a1a1;
-}
-
-/* Literal.String.Doc */
-/* line 73, ../_sass/_solarized_light.scss */
-.highlight .s2 {
-  color: #2aa198;
-}
-
-/* Literal.String.Double */
-/* line 74, ../_sass/_solarized_light.scss */
-.highlight .se {
-  color: #cb4b16;
-}
-
-/* Literal.String.Escape */
-/* line 75, ../_sass/_solarized_light.scss */
-.highlight .sh {
-  color: #93a1a1;
-}
-
-/* Literal.String.Heredoc */
-/* line 76, ../_sass/_solarized_light.scss */
-.highlight .si {
-  color: #2aa198;
-}
-
-/* Literal.String.Interpol */
-/* line 77, ../_sass/_solarized_light.scss */
-.highlight .sx {
-  color: #2aa198;
-}
-
-/* Literal.String.Other */
-/* line 78, ../_sass/_solarized_light.scss */
-.highlight .sr {
-  color: #dc322f;
-}
-
-/* Literal.String.Regex */
-/* line 79, ../_sass/_solarized_light.scss */
-.highlight .s1 {
-  color: #2aa198;
-}
-
-/* Literal.String.Single */
-/* line 80, ../_sass/_solarized_light.scss */
-.highlight .ss {
-  color: #2aa198;
-}
-
-/* Literal.String.Symbol */
-/* line 81, ../_sass/_solarized_light.scss */
-.highlight .bp {
-  color: #268bd2;
-}
-
-/* Name.Builtin.Pseudo */
-/* line 82, ../_sass/_solarized_light.scss */
-.highlight .vc {
-  color: #268bd2;
-}
-
-/* Name.Variable.Class */
-/* line 83, ../_sass/_solarized_light.scss */
-.highlight .vg {
-  color: #268bd2;
-}
-
-/* Name.Variable.Global */
-/* line 84, ../_sass/_solarized_light.scss */
-.highlight .vi {
-  color: #268bd2;
-}
-
-/* Name.Variable.Instance */
-/* line 85, ../_sass/_solarized_light.scss */
-.highlight .il {
-  color: #2aa198;
-}
-
-/* Literal.Number.Integer.Long */
-/* line 1, ../_sass/_header.scss */
-.site-header {
-  border-top: 5px solid #333;
-  border-bottom: 1px solid #e8e8e8;
-  min-height: 56px;
-  background-color: white;
-  width: 100%;
-  float: left;
-  margin-left: 0;
-  margin-right: 0;
-}
-/* line 8, ../_sass/_header.scss */
-.site-header .site-nav {
-  float: right;
-  line-height: 56px;
-}
-/* line 12, ../_sass/_header.scss */
-.site-header .site-nav .page-link {
-  margin-left: 20px;
-  color: #727272;
-  letter-spacing: -.5px;
-}
+*{margin:0;padding:0}html,body{height:100%;font-family:Helvetica, Arial, sans-serif;font-size:16px;line-height:1.5;font-weight:300;background-color:#fdfdfd;max-width:100%;margin-left:auto;margin-right:auto;background-image:-webkit-linear-gradient( left , rgba(102,102,255,0.25), rgba(179,179,255,0.25) 80%, transparent 80%);background-image:linear-gradient(to right, rgba(102,102,255,0.25), rgba(179,179,255,0.25) 80%, transparent 80%);background-size:8.47458%;background-origin:content-box;background-clip:content-box;background-position:left top}html:after,body:after{content:" ";display:block;clear:both}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:400}a{color:#2a7ae2;text-decoration:none}a:hover{color:#000;text-decoration:underline}a:visited{color:#205caa}.highlight{background-color:#efefef;padding:7px 7px 7px 10px;border:1px solid #ddd;-moz-box-shadow:3px 3px rgba(0,0,0,0.1);-webkit-box-shadow:3px 3px rgba(0,0,0,0.1);box-shadow:3px 3px rgba(0,0,0,0.1);margin:20px 0 20px 0;overflow:hidden}code{font-family:'Bitstream Vera Sans Mono','Courier', monospace}.highlight .c{color:#586e75}.highlight .err{color:#93a1a1}.highlight .g{color:#93a1a1}.highlight .k{color:#859900}.highlight .l{color:#93a1a1}.highlight .n{color:#93a1a1}.highlight .o{color:#859900}.highlight .x{color:#cb4b16}.highlight .p{color:#93a1a1}.highlight .cm{color:#586e75}.highlight .cp{color:#859900}.highlight .c1{color:#586e75}.highlight .cs{color:#859900}.highlight .gd{color:#2aa198}.highlight .ge{color:#93A1A1;font-style:italic}.highlight .gr{color:#dc322f}.highlight .gh{color:#cb4b16}.highlight .gi{color:#859900}.highlight .go{color:#93a1a1}.highlight .gp{color:#93a1a1}.highlight .gs{color:#93A1A1;font-weight:bold}.highlight .gu{color:#cb4b16}.highlight .gt{color:#93a1a1}.highlight .kc{color:#cb4b16}.highlight .kd{color:#268bd2}.highlight .kn{color:#859900}.highlight .kp{color:#859900}.highlight .kr{color:#268bd2}.highlight .kt{color:#dc322f}.highlight .ld{color:#93a1a1}.highlight .m{color:#2aa198}.highlight .s{color:#2aa198}.highlight .na{color:#93a1a1}.highlight .nb{color:#b58900}.highlight .nc{color:#268bd2}.highlight .no{color:#cb4b16}.highlight .nd{color:#268bd2}.highlight .ni{color:#cb4b16}.highlight .ne{color:#cb4b16}.highlight .nf{color:#268bd2}.highlight .nl{color:#93a1a1}.highlight .nn{color:#93a1a1}.highlight .nx{color:#555}.highlight .py{color:#93a1a1}.highlight .nt{color:#268bd2}.highlight .nv{color:#268bd2}.highlight .ow{color:#859900}.highlight .w{color:#93a1a1}.highlight .mf{color:#2aa198}.highlight .mh{color:#2aa198}.highlight .mi{color:#2aa198}.highlight .mo{color:#2aa198}.highlight .sb{color:#586e75}.highlight .sc{color:#2aa198}.highlight .sd{color:#93a1a1}.highlight .s2{color:#2aa198}.highlight .se{color:#cb4b16}.highlight .sh{color:#93a1a1}.highlight .si{color:#2aa198}.highlight .sx{color:#2aa198}.highlight .sr{color:#dc322f}.highlight .s1{color:#2aa198}.highlight .ss{color:#2aa198}.highlight .bp{color:#268bd2}.highlight .vc{color:#268bd2}.highlight .vg{color:#268bd2}.highlight .vi{color:#268bd2}.highlight .il{color:#2aa198}.site-header{border-top:5px solid #333;border-bottom:1px solid #e8e8e8;min-height:56px;background-color:white;width:100%;float:left;margin-left:0;margin-right:0}.site-header .site-nav{float:right;line-height:56px}.site-header .site-nav .page-link{margin-left:20px;color:#727272;letter-spacing:-.5px}
