Add normalize css
Normalize the css before styling

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
+@import 'normalize.css.scss/normalize.css.scss';
 @import 'bourbon/dist/bourbon';
 @import 'breakpoint/breakpoint/breakpoint';
 @import 'susy/sass/susy';
