--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,10 @@
 <header class="site-header">
 
-
     <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 
-    <nav class="site-nav">
-      {% for page in site.pages %}
-        <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-      {% endfor %}
-    </nav>
-
+    <!-- <nav class="site-nav"> -->
+    <!--   {% for page in site.pages %} -->
+    <!--     <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> -->
+    <!--   {% endfor %} -->
+    <!-- </nav> -->
 </header>
