Add bower component paths to sass path
Add components to sass path such that each component can be referenced
with a sass import with just its name instead of the full path.

--- a/css/main.scss
+++ b/css/main.scss
@@ -2,11 +2,11 @@
 ---
 
 $em-base: 14;
-@import 'normalize-scss/normalize';
-@import 'sassy-maps/sass/sassy-maps';
-@import 'bourbon/dist/bourbon';
-@import 'compass-breakpoint/stylesheets/breakpoint';
-@import 'susy/sass/susy';
+@import 'normalize';
+@import 'sassy-maps';
+@import 'bourbon';
+@import 'breakpoint';
+@import 'susy';
 
 @import 'solarized_light';
 @import 'base';
