Set up for responsive scaling
Set base font size on html element. Rems to scale for everything else.
On breakpoints change base font size on html element.

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,6 +1,9 @@
-html, body {
+html {
   @include breakpoint(map-get-deep($small-desktop, breakpoint)) {
     font-size: rem(16px);
-    padding: rem(10px);
   }
+}
+
+body {
+  padding: rem(10px);
 }
