--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,18 +10,19 @@ $desktop: (susy: (12, 1/4), breakpoint: (1280px));
 
 $susy: (
   global-box-sizing: border-box,
-  debug: (
-    image: show,
-    color: rgba(#66f, .25),
-    output: background,
-    toggle: top right,
-  )
+  gutter-position: split,
+  gutters: 1/4,
+  debug: (image: show)
 );
 
 @include border-box-sizing;
 
 
-html, body {
+html {
+  font-size: 14px;
+}
+
+body {
   @include container(map-get-deep($mobile, susy));
   @include breakpoint(map-get-deep($tablet, breakpoint)) {
     @include container(map-get-deep($tablet, susy));
@@ -32,8 +33,8 @@ html, body {
   @include breakpoint(map-get-deep($desktop, breakpoint)) {
     @include container(map-get-deep($desktop, susy));
   }
+
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 14px;
   padding: rem(5px);
   line-height: 1.5;
 }
