--- a/css/main.scss
+++ b/css/main.scss
@@ -1,15 +1,15 @@
 ---
 ---
 
-$em-base: 14;
 @import 'normalize';
+@import 'variables';
 @import 'sassy-maps';
 @import 'bourbon';
 @import 'breakpoint';
 @import 'susy';
 
+@import 'helpers';
 @import 'solarized_light';
 @import 'base';
-@import 'header';
 @import 'typography';
-
+@import 'modules';
