Establish vertical rhythm
Add helpers and give vertical rhythm to elements.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,6 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <!-- vertical rhythm debug -->
+    <!-- <link rel="stylesheet" href="http://basehold.it/24"> -->
 </head>
