--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,9 @@
 // ----
 
 html {
-  font-size: 16px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: $font-base;
+  line-height: $vertical-rhythm-ratio;
 }
 
 body {
@@ -17,13 +19,53 @@ body {
   @include jl-breakpoint(xl) {
     @include jl-container(xl);
   }
-
-  font-family: Helvetica, Arial, sans-serif;
-  padding: rem(16px);
-  line-height: 1.5;
 }
+
+p, ul, ol, dl, blockquote, pre, code,
+td, th, textarea, small, caption, .highlight {
+  @include jl-vertical-rhythm($font-size-base);
+  @include jl-padding(rem(16px));
+}
+
+ol, ul {
+  @include jl-padding(rem(32px));
+}
+
+//
+// Header styles
+//
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: $font-weight-header;
+  @include jl-padding(rem(16px));
+}
+
+h1 {
+  @include jl-vertical-rhythm($font-size-xxl);
+}
+
+h2 {
+  @include jl-vertical-rhythm($font-size-xl);
+}
+
+h3 {
+  @include jl-vertical-rhythm($font-size-l);
+}
+
+//
+// Link styles
+//
 
 a {
   text-decoration: none;
+  // color: $link-color;
+  // &:visited {
+  //   color: $link-visited-color;
+  // }
+  // &:hover {
+  //   color: $link-hover-color;
+  // }
+  // &:active {
+  //   color: $link-active-color
+  // }
 }
-
