--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,5 +1,5 @@
 html {
-  @include jl-breakpoint(md) {
-    font-size: 18px;
-  }
+  // @include jl-breakpoint(md) {
+  //   font-size: 18px;
+  // }
 }
