--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 $breakpoint-to-ems: true;
 // modular-scale
 $ms-base: 1rem;
-$ms-ratio: $fourth;
+$ms-ratio: $major-third;
 
 // typography
 $font-base: 16px;
