--- a/_assets/stylesheets/_typography.scss
+++ b/_assets/stylesheets/_typography.scss
@@ -1,13 +1,13 @@
 html {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: $font-family;
   font-size: $font-base;
   line-height: $vertical-rhythm-ratio;
   @include jl-responsive(
     (font-size: $font-base),
     (
-      md: $font-size-m,
-      lg: $font-size-l,
-      xl: $font-size-xl
+      md: $font-base + 2px,
+      lg: $font-base + 4px,
+      xl: $font-base + 6px
     )
   );
 }
@@ -17,6 +17,7 @@ html {
 //
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: $font-family-header;
   font-weight: $font-weight-header;
   @include jl-padding(rem(16px));
 }
