--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-    <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <h1 class="jl-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 
     <!-- <nav class="site-nav"> -->
     <!--   {% for page in site.pages %} -->
