--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <!-- Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata|Jim+Nightshade|Quattrocento+Sans|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
     {% stylesheet app %}
