--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Inconsolata|Jim+Nightshade|Quattrocento+Sans|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lustria|Inconsolata|Jim+Nightshade|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
     {% stylesheet app %}
 
     <!-- vertical rhythm debug -->
-    <!-- <link rel="stylesheet" href="http://basehold.it/21"> -->
+    <!-- <link rel="stylesheet" href="http://basehold.it/24"> -->
 </head>
